[project]
name = "dlai-merging"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "scikit-learn>=1.7.2",
    "torch",
    "transformers",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
